# H7-Framework

./: .gitignore  .mxproject  CMakeLists.txt  H7_Framework.ioc  README.md  STM32H723XG_FLASH.ld
Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
Core/Src/: dma.c  fdcan.c  freertos.c  gpio.c  main.c  spi.c  stm32h7xx_it.c  tim.c  usart.c  usb_otg.c
USB_DEVICE/App/: usbd_desc.c
User/Algorithm/Control/: controller.c  controller.h  observer.c
User/Algorithm/Energy/: Power_Ctrl.c  Power_Ctrl.h
User/Algorithm/Filter/: QuaternionEKF.c  VQF_filter.c  mahony_filter.c  mahony_filter.h
User/Algorithm/Inc/: Chassis_Calc.h  Power_Ctrl.h  VQF_filter.h  controller.h  kalman_filter.h  mahony_filter.h
User/Algorithm/Kinematics/: Chassis_Calc.c  Chassis_Calc.h
User/Algorithm/Src/: Chassis_Calc.c  Power_Ctrl.c  QuaternionEKF.c  VQF_filter.c  controller.c  kalman_filter.c  mahony_filter.c
User/App/1_Catapult_Hero/All_Task/: All_Task.c
User/App/1_Catapult_Hero/Catapult_Task/: Catapult_Ctrl.c  Catapult_Ctrl.h
User/App/1_Catapult_Hero/Chassis_Task/: Chassis_Ctrl.c  Chassis_Ctrl.h
User/App/1_Catapult_Hero/Command/: Robot_Cmd.c  Robot_Cmd.h
User/App/1_Catapult_Hero/IMU_Task/: IMU_Task.c
User/App/1_Catapult_Hero/System_Init/: Robot_Config.c  System_Init.c
User/App/2_Engineer/: CMakeLists.txt
User/App/2_Engineer/IMU_Task/: IMU_Task.c
User/App/2_Engineer/System_Init/: Robot_Config.c  System_Init.c
User/App/7_Sentry_Master/All_Task/: All_Task.c
User/App/7_Sentry_Master/Chassis_Task/: Chassis_Ctrl.c  Chassis_Ctrl.h
User/App/7_Sentry_Master/System_Init/: Robot_Config.c  System_Init.c
User/App/7_Sentry_Slave/All_Task/: All_Task.c
User/App/All_Task/: All_Task.c  All_Task.h
User/App/Catapult_Task/: Catapult_Ctrl.c
User/App/Chassis_Task/: Chassis_Ctrl.c  Chassis_Ctrl.h
User/App/Command/: Robot_Cmd.c
User/App/IMU_Task/: IMU_Task.c  IMU_Task.h
User/App/Inc/: All_Task.h  IMU_Task.h  Interrupt.h
User/App/Src/: All_Task.c  IMU_Task.c  Interrupt.c
User/App/System_Init/: Robot_Config.c  Robot_Config.h  System_Init.c
User/BSP/DWT/: BSP_DWT.c  BSP_DWT.h
User/BSP/FDCAN/: BSP_FDCAN.c  BSP_FDCAN.h
User/BSP/Inc/: BSP-FDCAN.h  BSP_DWT.h  BSP_SPI.h  BSP_UART.h  WS2812.h
User/BSP/SPI/: BSP_SPI.c
User/BSP/Src/: BSP_DWT.c  BSP_FDCAN.c  BSP_SPI.c  BSP_UART.c  WS2812.c
User/BSP/TIM/: BSP_TIM.c  BSP_TIM.h
User/BSP/UART/: BSP_UART.c  BSP_UART.h
User/Device/Host_Comm/: Aim_Vision.c  Vofa.c
User/Device/IMU/: BMI088.c  BMI088Middleware.c  BMI088driver.h
User/Device/Inc/: BMI088driver.h  BM_Motor.h  DBUS.h  DJI_Motor.h  DM_Motor.h  LK_Motor.h  Offline_Detector.h  Power_CAP.h  Referee.h  SBUS.h  VT13.h
User/Device/Indicator/: Buzzer.c  Buzzer.h  WS2812.c  WS2812.h
User/Device/LED/: WS2812.c  WS2812.h
User/Device/Motor/: All_Motor.c  All_Motor.h  BM_Motor.h  DJI_Motor.h  DM_Motor.c  DM_Motor.h  LK_Motor.h
User/Device/Power/: Power_CAP.c  Power_CAP.h
User/Device/Referee/: Referee.c  Referee.h
User/Device/Src/: BMI088Middleware.c  BM_Motor.c  DBUS.c  DJI_Motor.c  DM_Motor.c  LK_Motor.c  Offline_Detector.c  Power_CAP.c  Referee.c  SBUS.c  VT13.c
User/System/Communication/: Comm_DualBoard.c  Comm_DualBoard.h  Comm_Router.c  Comm_Router.h  Message_Center.c  Message_Center.h
User/System/Feedback/: System_Indicator.c
User/System/State/: System_State.c  System_State.h
User/Utils/Inc/: All_Init.h  All_Motor.h  All_define.h  CKQ_MATH.h  CRC_DJI.h  Horizon_MATH.h  Offline_Detector.h  Vofa.h
User/Utils/Src/: All_Init.c  CKQ_MATH.c  Horizon_MATH.c  Offline_Detector.c  Vofa.c  user_lib.c
cmake/stm32cubemx/: CMakeLists.txt
